<resources>
    <string name="app_name">Pharm</string>
    <string name="login">Login</string>
    <string name="already_n_have_an_n_account">Already \nHave an \nAccount?</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="new_user_register_now">New user? Register Now</string>
    <string name="forgot_password_nenter_your_email">Forgot Password? \nEnter Your email :</string>
    <string name="send_me_a_recovery_email">Send me a recovery email</string>
    <string name="back">Back</string>
    <string name="my_account"> My Account</string>
    <string name="my_orders"> My Orders</string>
    <string name="logout"> Logout</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="title_activity_main3">MainActivity3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="todo">TODO</string>
    <string name="menu">Menu</string>
    <string name="todo2">TODO</string>
    <string name="arrow">Arrow</string>
    <string name="one">1</string>
    <string name="_1_personal_infromation">1 Personal Infromation</string>
    <string name="_2_email_and_password">2 Email and Password</string>
    <string name="todo3">TODO</string>
    <string name="todo4">TODO</string>
    <string name="next">Next</string>
    <string name="name">Name</string>
    <string name="name2">Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="date_of_birth2">date of birth</string>
    <string name="city">City</string>
    <string name="gender">Gender</string>
    <string name="social_status">Social Status</string>
    <string name="todo5">TODO</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="todo9">todo</string>
    <string name="admin_dashboard">Admin Dashboard</string>
    <string name="todo10">TODO</string>
    <string name="my_cart">My Cart</string>
    <string name="_0">0</string>
    <string name="confirm_buy">Confirm</string>
    <string name="aprrove_orders">Aprrove Orders</string>
    <string name="order_details">Order Details</string>
    <string name="approve">Approve</string>
    <string name="decline">Decline</string>
</resources>