<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background3"

    tools:context=".MainActivity4">


    <Button
        android:id="@+id/back"
        android:layout_width="120dp"
        android:layout_height="57dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="275dp"
        android:layout_marginBottom="35dp"
        android:fontFamily="@font/alatsi"
        android:text="@string/back"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="VisualLintOverlap" />


    <Button
        android:id="@+id/next"
        android:layout_width="120dp"
        android:layout_height="57dp"
        android:layout_marginStart="283dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="35dp"
        android:fontFamily="@font/alatsi"
        android:text="@string/next"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="VisualLintOverlap" />

    <Button
        android:id="@+id/submit"
        android:layout_width="120dp"
        android:layout_height="57dp"
        android:layout_marginStart="283dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="35dp"
        android:fontFamily="@font/alatsi"
        android:text="Submit"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="VisualLintOverlap" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="199dp"
        android:layout_height="54dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="208dp"
        android:layout_marginBottom="667dp"
        android:layout_weight="1"
        android:contentDescription="@string/todo3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/progress2" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="190dp"
        android:layout_height="54dp"
        android:layout_marginStart="212dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="667dp"
        android:layout_weight="1"
        android:contentDescription="@string/todo4"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/progress2"
        tools:ignore="ImageContrastCheck" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginBottom="661dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="3" />

        <TextView
            android:id="@+id/one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/alatsi"
            android:text="@string/_1_personal_infromation"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck"
            tools:layout_editor_absoluteX="203dp"
            tools:layout_editor_absoluteY="7dp" />


        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="4" />

        <TextView
            android:id="@+id/two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/alatsi"
            android:text="@string/_2_email_and_password"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck"
            tools:layout_editor_absoluteX="203dp"
            tools:layout_editor_absoluteY="7dp" />


        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="3" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/form1"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_marginTop="71dp"
        android:layout_marginBottom="113dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/name"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/deepblue"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/getname"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/name2"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColorHint="@color/deepblue"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/dob"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/date_of_birth"
            android:textColor="@color/deepblue"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/getdob"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/date_of_birth2"
            android:importantForAutofill="no"
            android:inputType="date"
            android:minHeight="48dp"
            android:textColorHint="@color/deepblue" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <TextView
            android:id="@+id/city"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/city"
            android:textColor="@color/deepblue"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <Spinner
            android:id="@+id/citymenu"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <TextView
            android:id="@+id/gender"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:textColor="@color/deepblue"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <Spinner
            android:id="@+id/gendermenu"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:minHeight="48dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <TextView
            android:id="@+id/status"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/social_status"
            android:textColor="@color/deepblue"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <Spinner
            android:id="@+id/statusmenu"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:minHeight="48dp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/form2"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_marginTop="71dp"
        android:layout_marginBottom="113dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/email"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/deepblue"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/getemail"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textColorHint="@color/deepblue"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/password"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="@color/deepblue"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/getpass"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColorHint="@color/deepblue"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <TextView
            android:id="@+id/reppasss"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/confirm_password"
            android:textColor="@color/deepblue"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <EditText
            android:id="@+id/getreppass"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/confirm_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColorHint="@color/deepblue"
            tools:ignore="DuplicateSpeakableTextCheck" />

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>