<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaper"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/already"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="41dp"
        android:layout_marginBottom="586dp"
        android:text="@string/already_n_have_an_n_account"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold"
        android:fontFamily="@font/alatsi"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/email"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="179dp"
        android:layout_marginBottom="507dp"
        android:ems="10"
        android:hint="@string/email"
        android:fontFamily="@font/alatsi"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="Autofill,TextContrastCheck" />

    <EditText
        android:id="@+id/password"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="238dp"
        android:layout_marginBottom="448dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:fontFamily="@font/alatsi"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="Autofill,TextContrastCheck" />

    <Button
        android:id="@+id/login"
        android:layout_width="145dp"
        android:layout_height="60dp"
        android:layout_marginStart="135dp"
        android:layout_marginTop="309dp"
        android:layout_marginEnd="131dp"
        android:layout_marginBottom="362dp"
        android:text="@string/login"
        android:textStyle="bold"
        android:fontFamily="@font/alatsi"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="297dp"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="414dp"
        android:text="@string/forgot_password"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        android:fontFamily="@font/alatsi"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="95dp"
        android:layout_marginTop="384dp"
        android:layout_marginEnd="95dp"
        android:layout_marginBottom="320dp"
        android:text="@string/new_user_register_now"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:fontFamily="@font/alatsi"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>