<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaper"
    tools:context=".MainActivity2">


    <TextView
        android:id="@+id/passrecover"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="87dp"
        android:layout_marginTop="144dp"
        android:layout_marginEnd="88dp"
        android:layout_marginBottom="516dp"
        android:gravity="center"
        android:text="@string/forgot_password_nenter_your_email"
        android:textAlignment="gravity"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="bold"
        android:fontFamily="@font/alatsi"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/editTextTextEmailAddress2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="247dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="439dp"
        android:ems="10"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:fontFamily="@font/alatsi"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/sendemail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginTop="336dp"
        android:layout_marginEnd="88dp"
        android:layout_marginBottom="368dp"
        android:text="@string/send_me_a_recovery_email"
        android:textAlignment="gravity"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:fontFamily="@font/alatsi"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/back"
        android:layout_width="119dp"
        android:layout_height="77dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="619dp"
        android:layout_marginEnd="276dp"
        android:layout_marginBottom="35dp"
        android:text="@string/back"
        android:textSize="20sp"
        android:textStyle="bold"
        android:fontFamily="@font/alatsi"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>